# D-Building-5.0

./: .gitignore
Config/: db.py
ML_HACK_DSTU/: evaluate_task.py  tg.py
backend/: .example.env  .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml
backend/Models/: User.py
backend/Routers/v1/: user_router.py
backend/Schemas/: User_Schemas.py
backend/src/Config/: middleware.yaml
backend/src/Controllers/: AiController.py  AuthController.py  CommandController.py  CommentController.py  MasterTaskController.py  PointController.py  PositionController.py  RoleController.py  StageController.py  TaskController.py  ToolController.py  UserController.py  UserMetaController.py
backend/src/Helpers/: MiddlewareHelper.py  SeederHelper.py  WatchdogHelper.py
backend/src/Models/: Command.py  CommandUser.py  Comment.py  MasterTask.py  Point.py  Position.py  Positions.py  Role.py  Stage.py  Task.py  Tool.py  User.py  UserMeta.py
backend/src/Routers/v1/: ai_router.py  auth_router.py  command_router.py  comment_router.py  master_task_router.py  point_router.py  position_router.py  role_router.py  stage_router.py  task_router.py  tool_router.py  user_meta_router.py  user_router.py
backend/src/Schemas/: AiSchemas.py  AuthSchemas.py  CommandSchemas.py  CommentSchemas.py  MasterTaskSchemas.py  PointSchemas.py  PositionSchemas.py  RoleSchemas.py  StageSchemas.py  TaskSchemas.py  ToolChemas.py  ToolSchemas.py  UserMetaSchemas.py  UserSchemas.py
backend/src/ml/: rec_employees.py  tg.py
ml/: TaskManagerAI.session  chat_id.txt  evaluate_task.py  rec_enploys.py  (+3 more)
(+48 files in other folders)
