[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "knyaz7", email = "vn.guitar@mail.ru" }
]
dependencies = [
    "fastapi>=0.115.3",
    "uvicorn>=0.32.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
