[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "knyaz7", email = "vn.guitar@mail.ru" }
]
dependencies = [
    "fastapi>=0.115.3",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
    "apscheduler>=3.10.4",
    "g4f>=0.3.3.2",
    "pyrogram>=2.0.106",
    "speechrecognition>=3.11.0",
    "pydub>=0.25.1",
]
readme = "README.md"
requires-python = ">= 3.8"


[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
